@startuml

[*] -> INITIAL
INITIAL --> STARTING : Node first txn when starting
STARTING --> ONLINE : Node saw own STARTING now go ONLINE
STARTING --> OFFLINING : Node was shut down while starting
ONLINE --> OFFLINING : Node gracefully shutting down
ONLINE --> DEAD : Node no longer heartbeating and marked DEAD
OFFLINING --> DEAD : Node left cluster

@enduml
